[lworld] C2 compilation fails with guarantee(sect->end() <= sect->limit()) failed: sanity

XMLWordPrintable

      # A fatal error has been detected by the Java Runtime Environment:
      #
      # Internal Error (codeBuffer.cpp:1014), pid=7552, tid=7589
      # guarantee(sect->end() <= sect->limit()) failed: sanity

      Current CompileTask:
      C2: 721 149 b 4 compiler.valhalla.inlinetypes.TestLWorld::test52 (18 bytes)

      Stack: [0x00007f727cd70000,0x00007f727ce71000], sp=0x00007f727ce6c680, free space=1009k
      Native frames: (J=compiled Java code, A=aot compiled Java code, j=interpreted, Vv=VM code, C=native code)
      V [libjvm.so+0x530da0] CodeBuffer::verify_section_allocation()+0x1d0
      V [libjvm.so+0x531079] CodeBuffer::~CodeBuffer()+0x19
      V [libjvm.so+0xbd3fe0] PhaseOutput::scratch_emit_size(Node const*)+0x320
      V [libjvm.so+0xbcff4d] PhaseOutput::shorten_branches(unsigned int*)+0x23d
      V [libjvm.so+0xbd807c] PhaseOutput::Output()+0x61c
      V [libjvm.so+0x559fe2] Compile::Code_Gen()+0x642
      V [libjvm.so+0x55e1ac] Compile::Compile(ciEnv*, ciMethod*, int, bool, bool, bool, bool, DirectiveSet*)+0x12fc
      V [libjvm.so+0x49edb1] C2Compiler::compile_method(ciEnv*, ciMethod*, int, bool, DirectiveSet*)+0x111
      V [libjvm.so+0x566578] CompileBroker::invoke_compiler_on_method(CompileTask*)+0xd18
      V [libjvm.so+0x567048] CompileBroker::compiler_thread_loop()+0x4e8
      V [libjvm.so+0xd7f02b] JavaThread::thread_main_inner()+0x11b
      V [libjvm.so+0xd83f3d] Thread::call_run()+0xfd
      V [libjvm.so+0xbc0a77] thread_native_entry(Thread*)+0xe7

            Assignee:
            Tobias Hartmann
            Reporter:
            Tobias Hartmann
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved: