8253047: [lworld] C2 compilation fails with guarantee(sect->end() <= sect->limit()) failed: sanity