src/hotspot/share/ci/ciInlineKlass.hpp
@@ -86,6 +86,7 @@ public:
   int default_value_offset() const;
   ciInstance* default_instance() const;
   bool contains_oops() const;
+  int oop_count() const;
   Array<SigEntry>* extended_sig() const;
   address pack_handler() const;
   address unpack_handler() const;
